--- a/src/main/resources/assets/debugrenderers/lang/en_us.json
+++ b/src/main/resources/assets/debugrenderers/lang/en_us.json
@@ -1,5 +1,8 @@
 {
-  "commands.dbr.enabled": "Enabled %s renderer",
-  "commands.dbr.disabled": "Disabled %s renderer",
-  "commands.dbr.noSuchRenderer": "There is no renderer called %s"
+  "commands.dr.onEnabled": "Enabled %s renderer",
+  "commands.dr.onDisabled": "Disabled %s renderer",
+  "commands.dr.noSuchRenderer": "There is no renderer called %s",
+  "commands.dr.enabledHeader": "ENABLED: ",
+  "commands.dr.disabledHeader": "DISABLED: ",
+  "commands.dr.none": "none"
 }
